--- a/Plotting_Assignment.ipynb
+++ b/Plotting_Assignment.ipynb
@@ -724,10 +724,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Description of the CarbonDioxide Distribution Histogram:\n",
+        "Interpretation of the CarbonDioxide Distribution Histogram:\n",
         "\n",
         "\n",
-        "This histogram shows the distribution of CO2 emissions across vehicles. The x-axis represents the range of CO2 emissions, which starts at 0 (less polluting vehicle) and increases towards 700 ( most polluting vehicle). The y-axis represents the frequency, or the number of vehicles that emit a specific amount of CO2 within a certain range on the x-axis. The histogram is giving the information that this distribution is a bell-shaped distribution, suggesting the data is approximately normally distributed with a peak around the 300 - 400 range at a frequency of over 350 vehicles . Overall, the distribution appears symmetric, with the frequencies decreasing evenly as we move away from the center. There are no visible outliers.\n",
+        "This histogram shows the distribution of CO2 emissions across vehicles. The x-axis represents the range of CO2 emissions, which starts at 0 and increases towards 700 . The y-axis represents the frequency, or the number of vehicles that emit a specific amount of CO2 within a certain range on the x-axis. The histogram is giving the information that this distribution is a bell-shaped distribution, suggesting the data is approximately normally distributed with a peak around the 300 - 400 range at a frequency of over 350 vehicles . Overall, the distribution appears symmetric, with the frequencies decreasing evenly as we move away from the center. There are no visible outliers.\n",
         "\n",
         "\n",
         "Interpretation of the CarbonDiaoxide Distribution Histogram:"
@@ -842,10 +842,10 @@
       "cell_type": "markdown",
       "source": [
         "\n",
-        "Description of the Fuel-efficiency Score Distribution Histogram:\n",
+        "Interpretation of the Fuel-efficiency Score Distribution Histogram:\n",
         "\n",
         "The histogram shows a bell-shaped distribution of Fuel Efficiency (FE) scores, with values ranging from 0 to 10 where most vehicles score around the middle of the FE range, typically between 4 and 6.\n",
-        "The peak of the histogram is around an FE score of 5, with the frequency around 1000 vehicles, indicating that a large portion of the dataset has a moderate FE score. The distribution is symmetrical, meaning the frequency of vehicles with very low and very high FE scores is relatively balanced, decreasing evenly on either side of the central peak. As we move towards the higher and lower ends of the FE score range (near 0 or 10), the frequency gradually declines, with relatively fewer vehicles scoring at the extremes. There are no significant outliers in the dataset.\n"
+        "The peak of the histogram is around an FE score of 5, with the frequency around 1000 vehicles, indicating that a large portion of the dataset has a moderate FE score. The distribution is symmetrical, meaning the frequency of vehicles with very low and very high FE scores is relatively balanced, decreasing evenly on either side of the central peak. As we move towards the higher and lower ends of the FE score range (near 0 or 10), the frequency gradually declines, with relatively fewer vehicles scoring at the extremes. There are no significant outliers.\n"
       ],
       "metadata": {
         "id": "2y-_mZDuqOq7"
@@ -1774,7 +1774,7 @@
         "\n",
         "5. The CO2 Emissions column has a correlation of -0.94 with the target variable (GHG Score), while FE Score has a stronger positive correlation of 0.99. Since these two features are highly negatively correlated with each other (-0.94 correlation), I will drop CO2 Emissions and keep FE Score, as it has a much stronger correlation with the target. This approach maintains predictive strength while minimizing redundancy.\n",
         "\n",
-        "I will also drop columns that are not expected to have a meaningful impact on the target variable, based on domain knowledge or feature importance analysis. Examples of these columns include (id, year, pv2, and pv4). These columns are either identifiers or irrelevant to the target variable and have no significant impact on predicting the target. Removing them helps streamline the dataset and focus on more relevant features.\n",
+        "I will also drop columns that are not expected to have a meaningful impact on the target variable, based on d feature importance analysis. Examples of these columns include (id, year, pv2, and pv4). These columns are either identifiers or irrelevant to the target variable and have no significant impact on predicting the target. Removing them helps streamline the dataset and focus on more relevant features.\n",
         "\n"
       ],
       "metadata": {
